update bai tap 04-06-2021

--- a/module-1/css-lession-pratice-2/asset/css/style.css
+++ b/module-1/css-lession-pratice-2/asset/css/style.css
@@ -3,6 +3,14 @@
     padding: 0px;
 }
 
+a{
+    color: black;
+}
+
+a:hover {
+    color: brown;
+}
+
 #info {
     width: 1880px;
     min-height: 200px;
