--- a/module-1/css-lession-3/asset/css/style.css
+++ b/module-1/css-lession-3/asset/css/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 .note {
 
 }
@@ -47,28 +52,29 @@ p{
 
 #dong-2{
     width: 90%;
-    height: 600px;
+    /* height: 600px; */
+    min-height: 100px;
     background-color: #4B82FE ;
     margin: auto;
 }
 
 .block-2-1{
     width: 80%;
-    height: 100%;
+    height: 600px;
     background-color:#4B82FE ;
     float: left;
 }
 
 .block-2-2{
     width: 20%;
-    height: 60%;
+    height: 400px;
     background-color:#229954 ;
     float: left;
 }
 
 .block-2-3{
     width: 20%;
-    height: 40%;
+    height: 200px;
     background-color:#FFC300 ;
     float: left;
 }
