--- a/module-1/css-lession-pratice-2/asset/css/style.css
+++ b/module-1/css-lession-pratice-2/asset/css/style.css
@@ -45,6 +45,7 @@ a:hover {
     height: 200px;
     background-color: #5DADE2 ;
     margin: auto;
+    line-height: 200px;
 }
 
 #content {
@@ -53,6 +54,7 @@ a:hover {
     background-color: #5DADE2 ;
     margin: auto;
     margin-top: 40px;
+    line-height: 360px;
 }
 
 #footer {
@@ -61,6 +63,7 @@ a:hover {
     background-color: #5DADE2 ;
     margin: auto;
     margin-top: 40px;
+    line-height: 160px;
 }
 
 
