--- a/module-1/css-lesson-4-3.1/assets/css/style.css
+++ b/module-1/css-lesson-4-3.1/assets/css/style.css
@@ -25,7 +25,7 @@
 
 .wapper {
     width: 960px; min-height: 65px; margin: auto;}
-.wapper-2 { width: 960px; min-height: 100px; margin: auto; background-color: #FFFFFF;}
+.wapper-2 { width: 960px; min-height: 900px; margin: auto; background-color: #FFFFFF; }
 h1 {
     width: 100%;height: 131px;line-height: 131px;padding-left: 50px; font-size: 60px;
     color: white;
@@ -66,7 +66,7 @@ display: none;
 
 
 
-#left-cont { width: 660px; min-height: 900px; float: left; padding: 20px;}
+#left-cont { width: 620px; float: left; padding: 20px;}
 
 .block {width: 100%; height: 26px; padding: 5px 10px; border: 1px solid; float: left; margin-bottom: 20px; line-height: 26px; font-size: 12px; font-weight: bold;}
 
@@ -77,4 +77,18 @@ display: none;
 
 .close-btn{float: right; top: 10px;}
 
-#right-cont {width: 260px; min-height: 900px; float: right; padding: 20px;}
+#right-cont {width: 240px;float: right; padding: 20px;}
+
+#h-menu-down {width: 220px; height: 47.2px; background: #ddecff; padding: 10px; border: 1.6px;}
+
+#menu-down {}
+
+#menu-down ul li {list-style: none; width: 220px; height: 58px; margin-top: 10px; border-bottom-width: 1.6px; border-bottom-color: #ccc; border-bottom-style: solid; padding: 5px; position: relative;}
+
+#menu-down img { width: 30px; height: 28px; margin: 5px 10px; position: absolute;}
+
+#menu-down a {text-decoration: none; color: blue; font-size:15px; position: absolute; left: 60px;}
+
+#menu-down p { text-align: center; position: absolute; left:60px; top: 35px;}
+
+#menu-down ul li:hover {background: #ddecff; }
