--- a/module-1/css-lesson-5-2/asset/css/style.css
+++ b/module-1/css-lesson-5-2/asset/css/style.css
@@ -1,22 +1,21 @@
-#all {width: 960px; min-height: 300px; background-color: palevioletred; margin: auto; float: left;}
+#all {width: 960px; min-height: 300px; background-color: palevioletred; margin: auto;}
 /* #trai { width: 500px; height: 500px; background-color: #b8d8e0; float: left;}
 #phai {width: 400px; height: 600px; background-color: palegreen; float: left;} */
-
 
 header {width: 900px; height: 200px; background-color: #b8d8e0; margin: auto; border: 15px solid #414042; box-sizing: border-box;}
 
 nav { width: 900px; height: 70px; background-color: #b8d8e0; margin: auto;
 border: 15px solid #414042; padding: 10px; box-sizing: border-box; margin-top: 20px;}
 
-#content { width: 100%; min-height: 100px; margin-top: 20px; background-color: palevioletred;float: left; }
+#content { width: 100%; min-height: 100px; background-color: palevioletred;float: left; padding: 20px; box-sizing: border-box;}
 
-#left {width: 600px; height: 500px; float: left; margin-left: 20px; padding: 20px; box-sizing: border-box;}
+#left {width: 580px; height: 480px; float: left; margin:0px 20px 0 10px; box-sizing: border-box; border: 10 px solid #414042;}
 
-section {width: 100%; height: 250px; margin-bottom: 20px; background-color: royalblue; float: left;}
+section {width: 580px; height: 230px; margin-bottom: 20px; background-color: royalblue; float: left; border: 10px solid #414042;}
 
-article {width: 100%; height: 230px;  background-color: royalblue; float: left; }
+article {width: 580px; height: 210px;  background-color: royalblue; float: left; border: 10px solid #414042;}
 
-aside {width: 300px; height: 500px; float: left; background-color: royalblue; margin: 20px 0px 20px 20px; padding: 20px; box-sizing: border-box;}
+aside {width: 280px; height: 500px; float: left; background-color: royalblue; margin-left: 20px; padding: 20px; box-sizing: border-box;border: 10px solid #414042;}
 
 footer {width: 100%; height: 200px; background-color: royalblue; float: left;}
 
